Refactor file movement guidelines for efficiency in DocFlow
- Updated documentation across multiple files to emphasize the use of the terminal `mv` command for moving files as a single operation.
- Revised instructions to highlight benefits such as faster execution and reduced approval requirements.
- Enhanced clarity in rules and commands related to file operations, ensuring a more efficient workflow for users.

--- a/releases/2.1.md
+++ b/releases/2.1.md
@@ -88,6 +88,16 @@ BACKLOG → READY → IMPLEMENTING → REVIEW → QE_TESTING → COMPLETE
 BACKLOG → ACTIVE → COMPLETE
 ```
 
+### File Movement Efficiency
+**Changed from:** "Delete source then create destination (two approvals)"  
+**Changed to:** "Use terminal mv command (single operation, one approval)"
+
+**Benefits:**
+- ✅ Faster (one operation vs two)
+- ✅ Fewer approvals required
+- ✅ More efficient workflow
+- ✅ Less context switching
+
 ### Context Loading Strategy
 **Changed from:** "Always auto-load everything"  
 **Changed to:** "Situational loading based on task"
