Refactor DocFlow setup and command structure for improved usability
- Consolidated setup commands into a single `/docflow-setup` command, streamlining the initialization process for new projects, retrofitting existing code, and upgrading from previous DocFlow versions.
- Introduced `docflow-install.sh` for a simplified one-line installation method, enhancing user experience and reducing setup complexity.
- Updated documentation in DOCFLOW-GUIDE.md and README.md to reflect the new command structure and installation process, ensuring clarity and consistency across all files.
- Removed outdated commands `/docflow-new`, `/docflow-scan`, and `/docflow-upgrade`, replacing them with the more versatile `/docflow-setup` command.
- Enhanced overall documentation to provide clear guidance on project setup, command usage, and expected outcomes, improving the onboarding experience for new users.

--- a/releases/2.1.md
+++ b/releases/2.1.md
@@ -45,8 +45,8 @@ Version 2.1 represents a complete refinement of the DocFlow system focused on si
 - 📝 `bug.md` - Root cause analysis and prevention
 - 📝 `idea.md` - Quick exploration with decision path
 
-### Commands Expanded
-**Command count: 6 → 12**
+### Commands Refined
+**Command count: 6 → 11**
 
 **Added:**
 - ✅ `/activate` - PM agent readies spec for implementation
@@ -56,9 +56,10 @@ Version 2.1 represents a complete refinement of the DocFlow system focused on si
 - ✅ `/block` - Implementation agent documents blockers
 - ✅ `/status` - Any agent checks current state
 
-**Renamed:**
-- 📝 `/new-project` → `/docflow-new`
-- 📝 `/scan-project` → `/docflow-scan`
+**Consolidated:**
+- 📝 `/docflow-new`, `/docflow-scan`, `/docflow-upgrade` → `/docflow-setup`
+- 📝 Single intelligent command auto-detects scenario (new/retrofit/upgrade)
+- 📝 Reduces complexity and user decision-making
 
 **Enhanced:**
 - 📝 All commands now have natural language triggers
@@ -113,6 +114,36 @@ BACKLOG → ACTIVE → COMPLETE
 - Efficiency: 96%+ context headroom available
 - Focused: Only relevant context loaded
 
+### Simplified Installation
+**Added:**
+- ✅ `docflow-install.sh` - One-line installation script
+- ✅ GitHub-hosted, version-controlled installation
+- ✅ Auto-detection of project state (new/existing/upgrade)
+- ✅ Safe upgrades (preserves all content)
+
+**Installation method:**
+```bash
+curl -sSL https://raw.githubusercontent.com/YOUR-ORG/docflow-template/main/docflow-install.sh | bash
+```
+
+**What it installs:**
+- All system files (.cursor, .claude, .github, AGENTS.md)
+- Complete docflow/ folder structure
+- All templates and documentation
+- Platform adapters
+
+**Then complete setup:**
+```bash
+/docflow-setup
+```
+
+**Benefits:**
+- ✅ One command installation (vs manual copy)
+- ✅ Version controlled (always get latest)
+- ✅ Auto-detects scenario (no guessing)
+- ✅ Safe for upgrades (preserves content)
+- ✅ Inspectable (can download and review first)
+
 ### Cross-Platform Support
 **Added:**
 - ✅ `AGENTS.md` - Universal AI agent instructions
@@ -142,9 +173,12 @@ BACKLOG → ACTIVE → COMPLETE
 
 ## Breaking Changes
 
+### Installation Method
+- Manual `cp -r template/* ...` → `docflow-install.sh` script
+- Hosted on GitHub (requires repo URL update)
+
 ### Command Names
-- `/new-project` → `/docflow-new`
-- `/scan-project` → `/docflow-scan`
+- `/new-project`, `/scan-project` → `/docflow-setup` (consolidated)
 
 ### Folder Structure
 - `shared/` removed → Use codebase search
@@ -166,16 +200,28 @@ BACKLOG → ACTIVE → COMPLETE
 
 ### From Version 1.x to 2.1
 
-**If you have old DocFlow in a project:**
+**Step 1: Install New System Files**
+```bash
+# In your project directory
+curl -sSL https://raw.githubusercontent.com/YOUR-ORG/docflow-template/main/docflow-install.sh | bash
+```
+This installs/upgrades all system files (rules, commands, templates).
 
-1. **Run `/docflow-scan`** in your existing project
-   - Agent will detect old structure
-   - Ask for permission to migrate
-   - Archive old system to `specs/archived-[date]/`
-   - Convert to new structure
+**Step 2: Complete Setup**
+```bash
+# In your AI tool
+/docflow-setup
+```
+The agent will:
+- Detect existing DocFlow
+- Ask for permission to migrate
+- Archive old structure (shared/, reference/)
+- Update spec formats (remove time, add complexity)
+- Preserve all content and active work
 
-2. **Manual updates needed:**
-   - Update any scripts referencing old paths
+**Manual updates needed:**
+- Update GitHub repo URL in `docflow-install.sh` (once)
+- Update any scripts referencing old paths
    - Check for references to `dependencies.md`
    - Update complexity field in existing specs
 
